@@ -24,6 +24,10 @@ Version CVS HEAD (?)
     - added initialization of some fixed info strings in file and
       instrument
 
+  * src/RIFF.cpp, src/RIFF.h:
+    - added constructor for File where endianess (RIFF/RIFX) can be
+      specified
+
 Version 3.1.1 (24 Mar 2007)
 
   * packaging changes:
